# OpenGLAPI

./: CMakeLists.txt
libs/: Shader.h
src/: DebugManager.cpp  DebugManager.hpp  InputManager.cpp  InputManager.hpp  OpenGLAPI.cpp  OpenGLAPI.hpp  RenderCall.cpp  RenderCall.hpp  RenderCallArgs.hpp  ShaderComponent.hpp  SpriteRenderer.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp  WindowManager.cpp  WindowManager.hpp
